# src/routes/borrowRoutes.js
@@ -1,31 +1,11 @@
 const express = require("express");
 const router = express.Router();
+const authMiddleware = require("../middleware/authMiddleware");
+const { borrowBook, returnBook, getBorrowings } = require("../controllers/borrowController");
+const { validate, borrowSchema } = require("../middleware/validate");
 
-const authMiddleware =
-require("../middleware/authMiddleware");
-
-const {
-  borrowBook,
-  returnBook,
-  getBorrowings
-} = require("../controllers/borrowController");
-
-router.post(
-  "/",
-  authMiddleware,
-  borrowBook
-);
-
-router.put(
-  "/return/:id",
-  authMiddleware,
-  returnBook
-);
-
-router.get(
-  "/",
-  authMiddleware,
-  getBorrowings
-);
+router.post("/", authMiddleware, validate(borrowSchema), borrowBook);
+router.put("/return/:id", authMiddleware, returnBook);
+router.get("/", authMiddleware, getBorrowings);
 
 module.exports = router;
